# docs/global_openapi.go
@@ -1,16 +1,14 @@
 package docs
 
 // @title           Kpture-backend
-// @version         1.0
-// @description     This is a sample server Petstore server.
-// @termsOfService  http://swagger.io/terms/
+// @version         0.1
+// @description     Kpture Backend server
 
-// @contact.name   API Support
-// @contact.url    http://www.swagger.io/support
-// @contact.email  support@swagger.io
+// @contact.name   Author
+// @contact.url    http://www.kpture.io
+// @contact.email  kpture.git@gmail.com
 
 // @license.name  Apache 2.0
 // @license.url   http://www.apache.org/licenses/LICENSE-2.0.html
 
-// @host      192.168.1.16:8080
-// @BasePath  /api/v2
+// @host      localhost:8080
