# docs/swagger.yaml
@@ -1,95 +1,91 @@
-basePath: /api/v2
 definitions:
-  capture.CaptureStatus:
+  agent.AgentInfo:
     properties:
-      capture_state:
-        type: string
-      description:
-        type: string
-    type: object
-  capture.Pod:
-    properties:
-      agentStatus:
-        type: string
-      metadata:
-        $ref: '#/definitions/capture.PodMetadata'
-      status:
-        $ref: '#/definitions/capture.PodStatus'
-    type: object
-  capture.PodMetadata:
-    properties:
-      filter:
-        type: string
       name:
         type: string
       namespace:
         type: string
-    type: object
-  capture.PodStatus:
-    properties:
-      phase:
+      targetUrl:
         type: string
-      started:
+      type:
         type: string
     type: object
-  capture.kpture:
+  capture.CaptureInfo:
     properties:
-      archive_location:
-        type: string
-      buffer_size:
-        type: string
-      name:
-        type: string
-      packet_miss:
-        type: integer
       packet_nb:
         type: integer
-      pods:
-        items:
-          $ref: '#/definitions/capture.PodMetadata'
-        type: array
       size:
+        type: integer
+    type: object
+  capture.Kpture:
+    properties:
+      capture_info:
+        $ref: '#/definitions/capture.CaptureInfo'
+      name:
         type: string
       status:
-        $ref: '#/definitions/capture.CaptureStatus'
+        type: string
       uuid:
         type: string
     type: object
-  httpserver.captureRequest:
+  server.KptureRequest:
     properties:
+      agents:
+        items:
+          properties:
+            name:
+              type: string
+            namespace:
+              type: string
+          type: object
+        type: array
       name:
         type: string
-      pods:
-        items:
-          $ref: '#/definitions/capture.PodMetadata'
-        type: array
     type: object
-host: 192.168.1.16:8080
+host: localhost:8080
 info:
   contact:
-    email: support@swagger.io
-    name: API Support
-    url: http://www.swagger.io/support
-  description: This is a sample server Petstore server.
+    email: kpture.git@gmail.com
+    name: Author
+    url: http://www.kpture.io
+  description: Kpture Backend server
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
-  termsOfService: http://swagger.io/terms/
   title: Kpture-backend
-  version: "1.0"
+  version: "0.1"
 paths:
-  /kubernetes/capture:
+  /api/v1/agents:
+    get:
+      description: Get Agents
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/agent.AgentInfo'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Get Agents
+      tags:
+      - agents
+  /api/v1/kpture:
     post:
       consumes:
       - application/json
-      description: Start K8S capture
+      description: Start Kpture
       parameters:
-      - description: selected pods for capture
+      - description: selected agents for capture
         in: body
         name: data
         required: true
         schema:
-          $ref: '#/definitions/httpserver.captureRequest'
+          $ref: '#/definitions/server.KptureRequest'
       produces:
       - application/json
       responses:
@@ -99,17 +95,17 @@ paths:
             Websocket:
               type: string
           schema:
-            $ref: '#/definitions/capture.kpture'
+            $ref: '#/definitions/capture.Kpture'
         "500":
           description: Internal Server Error
           schema:
             type: string
-      summary: Start K8S capture
+      summary: Start Kpture
       tags:
-      - kubernetes
-  /kubernetes/capture/{uuid}:
+      - kptures
+  /api/v1/kpture/{uuid}:
     get:
-      description: Get K8S capture
+      description: get K8S capture
       parameters:
       - description: capture uuid
         in: path
@@ -122,7 +118,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/capture.kpture'
+            $ref: '#/definitions/capture.Kpture'
         "404":
           description: Not Found
           schema:
@@ -131,12 +127,12 @@ paths:
           description: Internal Server Error
           schema:
             type: string
-      summary: Get K8S capture
+      summary: get K8S capture
       tags:
-      - kubernetes
-  /kubernetes/capture/{uuid}/download:
+      - kptures
+  /api/v1/kpture/{uuid}/download:
     get:
-      description: Download K8S capture
+      description: Download Kpture
       parameters:
       - description: capture uuid
         in: path
@@ -146,10 +142,6 @@ paths:
       produces:
       - application/json
       responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/capture.kpture'
         "404":
           description: Not Found
           schema:
@@ -158,12 +150,12 @@ paths:
           description: Internal Server Error
           schema:
             type: string
-      summary: Download K8S capture
+      summary: Download Kpture
       tags:
-      - kubernetes
-  /kubernetes/capture/{uuid}/stop:
+      - kptures
+  /api/v1/kpture/{uuid}/stop:
     put:
-      description: Stop K8S capture
+      description: Stop Kpture
       parameters:
       - description: capture uuid
         in: path
@@ -176,7 +168,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/capture.kpture'
+            $ref: '#/definitions/capture.Kpture'
         "404":
           description: Not Found
           schema:
@@ -185,12 +177,12 @@ paths:
           description: Internal Server Error
           schema:
             type: string
-      summary: Stop K8S capture
+      summary: Stop Kpture
       tags:
-      - kubernetes
-  /kubernetes/captures:
+      - kptures
+  /api/v1/kptures:
     get:
-      description: Get K8S captures
+      description: get K8S capture
       produces:
       - application/json
       responses:
@@ -198,34 +190,17 @@ paths:
           description: OK
           schema:
             additionalProperties:
-              $ref: '#/definitions/capture.kpture'
+              $ref: '#/definitions/capture.Kpture'
             type: object
+        "404":
+          description: Not Found
+          schema:
+            type: string
         "500":
           description: Internal Server Error
           schema:
             type: string
-      summary: Get K8S captures
+      summary: get K8S capture
       tags:
-      - kubernetes
-  /kubernetes/pods:
-    get:
-      consumes:
-      - '*/*'
-      description: Retrieve all pods in cluster
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/capture.Pod'
-            type: array
-        "500":
-          description: Internal Server Error
-          schema:
-            type: string
-      summary: Retrieve all pods in cluster
-      tags:
-      - kubernetes
+      - kptures
 swagger: "2.0"
