# pkg/server/server.go
@@ -1,0 +1,135 @@
+package server
+
+import (
+	"context"
+	"encoding/json"
+	"fmt"
+	"log"
+	"newproxy/pkg/agent"
+	"newproxy/pkg/capture"
+	"newproxy/pkg/logger"
+	"os"
+	"path/filepath"
+
+	"github.com/labstack/echo/v4"
+	"github.com/labstack/echo/v4/middleware"
+	"github.com/sirupsen/logrus"
+	v1 "k8s.io/apimachinery/pkg/apis/meta/v1"
+	"k8s.io/client-go/kubernetes"
+)
+
+type Server struct {
+	logger      *logrus.Entry
+	Agents      []capture.Agent
+	kptures     map[string]*capture.Kpture
+	Echo        *echo.Echo
+	kubeclient  kubernetes.Interface
+	storagePath string
+}
+
+func NewServer(kc *kubernetes.Clientset, storagePath string) *Server {
+	e := echo.New()
+	e.Use(middleware.CORSWithConfig(middleware.CORSConfig{
+		AllowOrigins: []string{"*"},
+		AllowHeaders: []string{echo.HeaderOrigin, echo.HeaderContentType, echo.HeaderAccept},
+	}))
+
+	serv := &Server{
+		Echo:        e,
+		logger:      logger.NewLogger("http"),
+		kubeclient:  kc,
+		storagePath: storagePath,
+		kptures:     make(map[string]*capture.Kpture),
+		Agents:      []capture.Agent{},
+	}
+
+	err := os.MkdirAll(storagePath, 0755)
+	if err != nil {
+		log.Fatal(err)
+	}
+
+	err = serv.LoadCaptures()
+	if err != nil {
+		log.Fatal(err)
+	}
+	serv.RegisterRoutes()
+
+	return serv
+}
+func (s *Server) Start() {
+	s.Echo.Logger.Fatal(s.Echo.Start(":8080"))
+}
+
+func (s *Server) RegisterK8sAgents() error {
+	list, err := s.kubeclient.CoreV1().Pods("").List(context.Background(), v1.ListOptions{
+		LabelSelector: "kpture-agent=true",
+	})
+	if err != nil {
+		s.logger.Error(err)
+		return err
+	}
+	for _, pod := range list.Items {
+		s.Agents = append(s.Agents, agent.NewCaptureSocket(agent.Info{
+			Name:      pod.Name,
+			Namespace: pod.Namespace,
+			Type:      agent.AgentTypek8s,
+			TargetURL: pod.Status.PodIP + ":10000",
+		}))
+	}
+	return nil
+}
+
+func (s *Server) StartKpture(name string, agents []capture.Agent) (*capture.Kpture, error) {
+	k, err := capture.NewKpture(name, s.storagePath, agents)
+	if err != nil {
+		return nil, err
+	}
+	s.kptures[k.UUID] = k
+	k.Start()
+	return k, nil
+}
+
+func (s *Server) StopKpture(name string) error {
+	if k, ok := s.kptures[name]; ok {
+		return k.Stop()
+	} else {
+		return fmt.Errorf("kpture %s not found", name)
+	}
+}
+
+func (s *Server) GetKpture(name string) *capture.Kpture {
+	return s.kptures[name]
+}
+
+func (s *Server) GetKptures() map[string]*capture.Kpture {
+	return s.kptures
+}
+
+func (s *Server) LoadCaptures() error {
+	curr := capture.Kpture{}
+	err :=
+		filepath.Walk(s.storagePath,
+			func(path string, info os.FileInfo, err error) error {
+				if err != nil {
+					return err
+				}
+				if info.Name() == "descriptor.json" {
+					dat, err := os.ReadFile(path)
+					if err != nil {
+						return err
+					}
+					err = json.Unmarshal(dat, &curr)
+					if err != nil {
+						return err
+					}
+					s.kptures[curr.UUID] = &curr
+				}
+
+				return nil
+			})
+	if err != nil {
+		log.Println(err)
+	}
+
+	return err
+}
